@@ -28,6 +28,9 @@
 	Consider trailing slash for directories or symbolic links that point to
 	directories for patterns in 'classify'.
 
+	Do not resolve symbolic links in directory preview.  Thanks to
+	filterfalse.
+
 	Fixed redirecting stdout of background commands to /dev/null, which could
 	be unwritable descriptor.  Thanks to c02y.
 
